@@ -50,6 +50,7 @@ examples/fixture_create_and_print_snak_wd_retrieved_fixture1.pl
 examples/fixture_create_and_print_snak_wd_sex_or_gender_male.pl
 examples/fixture_create_and_print_snak_wd_stated_in_viaf.pl
 examples/fixture_create_and_print_statement_wd_given_name_douglas.pl
+examples/fixture_create_and_print_statement_wd_grammatical_gender_masculine.pl
 examples/fixture_create_and_print_value_item_wd_dog.pl
 examples/fixture_create_and_print_value_item_wd_douglas.pl
 examples/fixture_create_and_print_value_item_wd_douglasadams.pl
