@@ -3,6 +3,8 @@
    Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::Retrieved::Fixture1.
  - Add doc for
    Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::GivenName::Douglas.
+ - Add doc for
+   Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::GrammaticalGender::Masculine.
  - Fix author tests for Wikibase::Datatype::Value::Sense.
 
 0.29 2023-04-24T18:31:06+02:00
